availableLogicalHeightUsing needs to take flexbox stretched heights into account

This function is used to calculate percentage positions for relative-
positioned boxes in LayoutBoxModelObject::relativePositionOffset and thus needs
to check childLogicalHeightForPercentageResolution.

BUG=646397
R=eae@chromium.org,dgrogan@chromium.org

Review-Url: https://codereview.chromium.org/2349803002
Cr-Commit-Position: refs/heads/master@{#419271}

Former-commit-id: 95c34ae1ef40f8aff3f8c718dcdbdeb65d8431ae